Fix gap at top of video caused by container padding

--- a/css/px-video.css
+++ b/css/px-video.css
@@ -23,7 +23,6 @@
 .px-video-img-captions-container {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
 	height: 0;
 }
 
